<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gopaysense.psdata.LoanApplicationActivity">

    <RelativeLayout
        android:id="@+id/rl_action_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <!--Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="40.0dp"
            android:layout_marginRight="40.0dp"
            android:layout_marginTop="30dip"
            android:layout_marginBottom="60dip"
            android:background="@drawable/btn_secondary"
            android:clickable="true"
            android:text="@string/step_action_back"
            android:textColor="@android:color/white"/-->

        <Button
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_primary"
            android:clickable="true"
            android:text="@string/step_action_next"
            android:textColor="@android:color/white"/>

    </RelativeLayout>


    <ListView
        android:id="@android:id/list"
        style="@style/ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_action_container"
        android:visibility="gone"/>

    <!--TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_one"
        android:textSize="24sp"
        android:layout_centerInParent="true"/-->

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_contact_desc"
        android:layout_centerInParent="true"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_below="@+id/tv_desc"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ProgressBar>

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_desc"
        android:layout_marginLeft="40.0dp"
        android:layout_marginRight="40.0dp"
        android:layout_marginTop="30dip"
        android:layout_marginBottom="60dip"
        android:background="@drawable/btn_primary"
        android:clickable="true"
        android:visibility="invisible"
        android:text="@string/step_action_retry"
        android:textColor="@android:color/white"/>


</RelativeLayout>